<resources>
    <string name="app_name">SoundPath</string>
    <string name="Record">RECORD</string>
    <string name="Marker">MARKER</string>
    <string name="Saved">SAVED</string>
    <string name="Location">LOCATION</string>
    <string name="Settings">SETTINGS</string>
    <string name="Search">SEARCH</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_gpslocation">GPSLocation</string>
    <string name="permission_required">Location Access is required to use this App</string>
    <string name="ok">OK!</string>
    <string name="permission_granted">Permission Granted you may now use the App</string>
    <string name="back_to_menu">Menu</string>
    <string name="Load_location">Getting location...</string>
    <string name="Saved_items">Saved items</string>
    <string name="Markers">Markers</string>
    <string name="Routes">Routes</string>
    <string name="Back">Back</string>
    <string name="Forwards">Run forwards</string>
    <string name="Backwards">Run backwards</string>

</resources>